<resources>
    <string name="app_name"></string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="user_name">Jaden</string>
    <string name="user_email">qkrgkdbs123@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_current">Current</string>
    <string name="menu_history">History</string>
    <string name="menu_map">Map</string>
    <string name="menu_device">Device</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_sign_out">Sign Out</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_so2_history">SO2HistoryActivity</string>
</resources>
