<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_current">

    <fragment
        android:id="@+id/nav_current"
        android:name="com.example.myapplication.ui.current.CurrentFragment"
        android:label="@string/menu_current"
        tools:layout="@layout/fragment_current" />

    <fragment
        android:id="@+id/nav_map"
        android:name="com.example.myapplication.ui.map.MapFragment"
        android:label="@string/menu_map"
        tools:layout="@layout/fragment_map" />

    <fragment
        android:id="@+id/nav_history"
        android:name="com.example.myapplication.ui.history.HistoryFragment"
        android:label="@string/menu_history"
        tools:layout="@layout/fragment_history" />

    <fragment
        android:id="@+id/nav_device"
        android:name="com.example.myapplication.ui.device.DeviceFragment"
        android:label="@string/menu_device"
        tools:layout="@layout/fragment_device" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.myapplication.ui.profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_sign_out"
        android:name="com.example.myapplication.ui.sign_out.SignoutFragment"
        android:label="@string/menu_sign_out"
        tools:layout="@layout/fragment_sign_out" />
</navigation>